Fix hover and active animation stuck on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -835,13 +835,13 @@ footer ul {
     /* nav menu animation */
 
     #menu a:hover {
-        background-color: none;
+        background-color: rgba(255, 255, 255, 0);
         box-shadow: none;
         animation: none;
     }
 
     #menu a:active {
-        background-color: none;
+        background-color: rgba(255, 255, 255, 0);
         box-shadow: none;
         animation: none;
     }
@@ -1064,13 +1064,13 @@ footer ul {
     /* nav menu animation */
 
     #menu a:hover {
-        background-color: none;
+        background-color: rgba(255, 255, 255, 0);
         box-shadow: none;
         animation: none;
     }
 
     #menu a:active {
-        background-color: none;
+        background-color: rgba(255, 255, 255, 0);
         box-shadow: none;
         animation: none;
     }
